--- a/webserver/zolasite/templates/partials/header.html
+++ b/webserver/zolasite/templates/partials/header.html
@@ -21,9 +21,8 @@
             </button>
             <div class="dropdown-content">
                 <a href="/gesetze/vorbereitung">In Vorbereitung</a>
-                <a href="/gesetze/bundestag">Im Bundestag</a>
-                <a href="/gesetze/abgeschlossen">Abgeschlossen</a>
-                <a href="/gesetze/liste">Liste</a>
+                <a href="/gesetze/parlament">Im Bundestag</a>
+                <a href="/gesetze/postparlament">Abgeschlossen</a>
             </div>
         </div> 
         <div class="dropdown">
