--- a/webserver/zolasite/templates/index.html
+++ b/webserver/zolasite/templates/index.html
@@ -1,14 +1,8 @@
 {% extends 'base.html' %}
 
 {% block pagecontent %}
-<h1>{{title}}</h1>
-
-<div class="search-bar">
-    <input type="text" placeholder="Search...">
-</div>
-
-<div class="content">
-    {% block content %} {% endblock %}
-</div>
-
+        <div class="main-content">
+            Main Content Area
+        </div>
+    </div>
 {% endblock %}
