--- a/webserver/zolasite/templates/base.html
+++ b/webserver/zolasite/templates/base.html
@@ -1,22 +1,23 @@
 {% set title = page.title | default(value=config.title)  %}
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title }}</title>
     <link rel="icon" href="/icons/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/newstyle.css">
+    <link rel="stylesheet" href="/tables.css">
 </head>
 
 <body>
-    <div class="container">
         {% include 'partials/header.html' %}
     
+        <div class="container">
+        {%include 'partials/sidebar.html'%}
         {% block pagecontent %} {% endblock pagecontent %}
+        </div>
         {% include 'partials/footer.html' %}
-    </div>
-    
 </body>
 </html>
