--- a/webserver/zolasite/templates/partials/categories.html
+++ b/webserver/zolasite/templates/partials/categories.html
@@ -16,12 +16,17 @@
     <div class="subcategories">
         <div class="subcategory"><a href="/in-beratung#initiative">Initiative</a></div>
         <div class="subcategory"><a href="/in-beratung#ausschussberatung">Ausschussberatung</a></div>
-        <div class="subcategory"><a href="/in-beratung#angenommen">Angenommen</a></div>
     </div>
 </div>
 <div class="category">
     <div class="category-title">
         <a href="/in-nachbereitung">In Nachbereitung</a>
+        <button class="toggle-btn" onclick="toggleCategory(this)">▼</button>
+    </div>
+    <div class="subcategories">
+        <div class="subcategory"><a href="/in-nachbereitung#angenommen">Angenommen</a></div>
+        <div class="subcategory"><a href="/in-nachbereitung#abgelehnt">Abgelehnt</a></div>
+        <div class="subcategory"><a href="/in-nachbereitung#veröffentlicht">Veröffentlicht</a></div>
     </div>
 </div>
 
