--- a/webserver/zolasite/templates/partials/categories.html
+++ b/webserver/zolasite/templates/partials/categories.html
@@ -1,32 +1,32 @@
 <div class="category">
     <div class="category-title">
-        <a href="/in-vorbereitung">In Vorbereitung</a>
+        <a href="/vorbereitung">In Vorbereitung</a>
         <button class="toggle-btn" onclick="toggleCategory(this)">▼</button>
     </div>
     <div class="subcategories">
-        <div class="subcategory"><a href="/in-vorbereitung#regierung">Regierung</a></div>
-        <div class="subcategory"><a href="/in-vorbereitung#andere">Andere</a></div>
+        <div class="subcategory"><a href="/vorbereitung#regierung">Regierung</a></div>
+        <div class="subcategory"><a href="/vorbereitung#andere">Andere</a></div>
     </div>
 </div>
 <div class="category">
     <div class="category-title">
-        <a href="/in-beratung">In Beratung</a>
+        <a href="/beratung">In Beratung</a>
         <button class="toggle-btn" onclick="toggleCategory(this)">▼</button>
     </div>
     <div class="subcategories">
-        <div class="subcategory"><a href="/in-beratung#initiative">Initiative</a></div>
-        <div class="subcategory"><a href="/in-beratung#ausschussberatung">Ausschussberatung</a></div>
+        <div class="subcategory"><a href="/beratung#initiative">Initiative</a></div>
+        <div class="subcategory"><a href="/beratung#ausschussberatung">Ausschussberatung</a></div>
     </div>
 </div>
 <div class="category">
     <div class="category-title">
-        <a href="/in-nachbereitung">In Nachbereitung</a>
+        <a href="/nachbereitung">In Nachbereitung</a>
         <button class="toggle-btn" onclick="toggleCategory(this)">▼</button>
     </div>
     <div class="subcategories">
-        <div class="subcategory"><a href="/in-nachbereitung#angenommen">Angenommen</a></div>
-        <div class="subcategory"><a href="/in-nachbereitung#abgelehnt">Abgelehnt</a></div>
-        <div class="subcategory"><a href="/in-nachbereitung#veröffentlicht">Veröffentlicht</a></div>
+        <div class="subcategory"><a href="/nachbereitung#angenommen">Angenommen</a></div>
+        <div class="subcategory"><a href="/nachbereitung#abgelehnt">Abgelehnt</a></div>
+        <div class="subcategory"><a href="/nachbereitung#veröffentlicht">Veröffentlicht</a></div>
     </div>
 </div>
 
